quick fix using flex and spacer divs  to prevent overlap in the header

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -77,6 +77,8 @@ footer h2 {
   top: 40vh;
 }
 .subtitle {
+  display: flex;
+  justify-content: space-between;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
@@ -91,6 +93,9 @@ footer h2 {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+.subtitle-spacer {
+  min-width: 28%;
 }
 .header {
   top: -0.5rem;
@@ -111,6 +116,9 @@ footer h2 {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+}
+.header .local {
+  max-width: 28%;
 }
 .header .social li {
   padding-right: 20px;
